# MegaQuest

./: .gitignore  .gitmodules  CMakeLists.txt  license
MegaQuestConsole/: CMakeLists.txt  config.json.in
MegaQuestConsole/assets/: DIAssets.config  client.json  commands.asset  commands.json  dialogs.asset  dialogs.json  io.asset  io.json  quest.asset  quest.json  settings.json  testquest.json
MegaQuestConsole/assets/quests/: testquest.asset  testquest.json
MegaQuestConsole/include/: Events.hpp  IInput.hpp  IModel.hpp  IOutput.hpp  InputHandler.hpp  Model.hpp
MegaQuestConsole/include/Config/: Settings.hpp  SettingsLoader.hpp
MegaQuestConsole/include/Containers/: Container.hpp  ContainerBase.hpp  ContainerBinder.hpp  ContainerFactory.hpp  ContainerImpl.hpp  ContainerInitializer.hpp  Context.hpp  ContextManager.hpp  Factory.hpp  FactoryBinder.hpp  FactoryImpl.hpp  GlobalContext.hpp  GlobalRootReader.hpp  IContainer.hpp  IContainerImpl.hpp  IContainerReader.hpp  IFactory.hpp  MethodInitializer.hpp  PropertyReader.hpp  ReaderImplRecord.hpp  Register.hpp  Utils.hpp
MegaQuestConsole/include/Factories/: CommandsFactory.hpp  DialogFactory.hpp  IButtonPanelFactory.hpp  IRootFactory.hpp  ITextViewFactory.hpp  JsonQuest.hpp  JsonQuestFactory.hpp  JsonRoomFactory.hpp  TestRoadFactory.hpp
MegaQuestConsole/include/Game/: ButtonList.hpp  ButtonListBase.hpp  CommandManager.di  CommandManager.hpp  Dialog.hpp  DialogFactory.hpp  Events.hpp  GameLoop.hpp  IButtonList.di  IButtonList.hpp  ICommand.di  ICommand.hpp  IDialog.di  IDialog.hpp  IInput.hpp  IInputHandler.hpp  IModel.hpp  IO.di  IOutput.hpp  InventoryButtonList.hpp  Model.di  Model.hpp  SimpleButtonList.hpp  SimpleDialog.hpp  SwitchDialog.hpp
MegaQuestConsole/include/IO/: ConsoleIO.di  ConsoleInput.hpp  ConsoleOutput.hpp  ConsoleView.hpp  InputHandler.di  InputHandler.hpp  Logger.di  Logger.hpp
MegaQuestConsole/include/Player/: ITextView.hpp  PlayerController.hpp  PlayerInventory.hpp
MegaQuestConsole/include/Utils/: EventBus.hpp  Reader.hpp
MegaQuestConsole/scripts/win/: generate_containers.bat
MegaQuestConsole/src/: Events.cpp  InputHandler.cpp  MegaQuestGameplay.cpp  Model.cpp  main.cpp
MegaQuestConsole/src/Config/: Settings.cpp  SettingsLoader.cpp
MegaQuestConsole/src/Containers/: Context.cpp  ContextManager.cpp  GlobalRootReader.cpp  Register.cpp  Utils.cpp
MegaQuestConsole/src/Factories/: CommandsFactory.cpp  DialogFactory.cpp  JsonQuest.cpp  JsonQuestFactory.cpp  JsonRoomFactory.cpp  TestRoadFactory.cpp
MegaQuestConsole/src/Game/: ButtonList.cpp  ButtonListBase.cpp  CommandManager.cpp  Dialog.cpp  DialogFactory.cpp  Events.cpp  GameLoop.cpp  IButtonList.cpp  InventoryButtonList.cpp  Logger.cpp  Model.cpp  SimpleButtonList.cpp  SimpleDialog.cpp  SwitchDialog.cpp
MegaQuestConsole/src/IO/: ConsoleInput.cpp  ConsoleOutput.cpp  ConsoleView.cpp  InputHandler.cpp  Logger.cpp
MegaQuestConsole/src/Player/: PlayerController.cpp  PlayerInventory.cpp
MegaQuestConsole/utils/generator/: generate.py
MegaQuestGameplay/: CMakeLists.txt  MegaQuestGameplay.cpp  MegaQuestGameplay.h
MegaQuestGameplay/include/: ActionContainer.hpp  ActionGroup.hpp  ActionMap.hpp  ActionSwitcher.hpp  AutoActionSwitcher.hpp  CaseContainer.hpp  FormBase.hpp  Forms.hpp  GiftReceiving.hpp  IAction.hpp  ICondition.hpp  IInventory.hpp  IParagraph.hpp  IRoom.hpp  IRoomFactory.hpp  Inventory.hpp  InventoryParagraph.hpp  Item.hpp  ItemInfo.hpp  ParagraphChanging.hpp  ParagraphGroup.hpp  ParagraphStateMachine.hpp  SimpleRoom.hpp  TextParagraph.hpp
MegaQuestGameplay/include/Actions/: ActionGroup.hpp  ClearInventory.hpp  CopyInventory.hpp  GiftReceiving.hpp  ParagraphChanging.hpp
MegaQuestGameplay/include/Conditions/: Comparison.hpp
MegaQuestGameplay/include/Paragraphs/: ConditionalParagraph.hpp  InventoryParagraph.hpp  ParagraphGroup.hpp  TextParagraph.hpp
MegaQuestGameplay/src/: ActionContainer.cpp  ActionGroup.cpp  ActionMap.cpp  ActionSwitcher.cpp  AutoActionSwitcher.cpp  CaseContainer.cpp  FormBase.cpp  FormatedString.cpp  Forms.cpp  GiftReceiving.cpp  Inventory.cpp  InventoryParagraph.cpp  Item.cpp  ItemInfo.cpp  ParagraphChanging.cpp  ParagraphGroup.cpp  ParagraphStateMachine.cpp  SimpleRoom.cpp  TextParagraph.cpp  TextString.cpp  Value.cpp
MegaQuestGameplay/src/Actions/: ClearInventory.cpp  CopyInventory.cpp  GiftReceiving.cpp  ParagraphChanging.cpp
MegaQuestGameplay/src/Paragraphs/: InventoryParagraph.cpp  TextParagraph.cpp
QuestCore/: CMakeLists.txt
QuestCore/include/: Case.di  Case.hpp  FormBase.hpp  FormatedString.di  FormatedString.hpp  Forms.di  Forms.hpp  IAction.di  IAction.hpp  IButtonGroup.hpp  IButtonPanel.hpp  ICaseContainer.di  ICaseContainer.hpp  ICaseContainerFactory.di  ICaseContainerFactory.hpp  ICondition.di  ICondition.hpp  IInventoryFactory.di  IInventoryFactory.hpp  IParagraph.di  IParagraph.hpp  IParagraphFactory.di  IParagraphFactory.hpp  IQuest.di  IQuest.hpp  IQuestFactory.hpp  ITextView.hpp  Inventory.di  Inventory.hpp  Item.di  Item.hpp  QuestBase.hpp  TextString.di  TextString.hpp  Value.di  Value.hpp
QuestCore/include/Actions/: Actions.di  CaseContainerSwitching.hpp  Clearing.hpp  Copying.hpp  ParagraphSwitching.hpp  Switching.hpp  Transfer.hpp
QuestCore/include/CaseContainers/: CaseContainerGroup.hpp  CaseContainerStateMachine.hpp  CaseContainers.di  ConditionalCaseContainer.hpp  SimpleCaseContainer.hpp
QuestCore/include/Conditions/: Comparison.hpp  Conditions.di
QuestCore/include/Paragraphs/: ConditionalParagraph.hpp  InventoryParagraph.hpp  ParagraphGroup.hpp  ParagraphStateMachine.hpp  Paragraphs.di  TextParagraph.hpp
QuestCore/include/Quests/: IInput.hpp  ISlot.hpp  Input.hpp  InventoryInput.hpp  InventorySlot.hpp  Quest.hpp  QuestHeader.hpp  QuestInitable.hpp  QuestList.hpp  QuestTarget.hpp  Quests.di  Slot.hpp
QuestCore/src/: Case.cpp  FormatedString.cpp  Forms.cpp  Inventory.cpp  Item.cpp  QuestBase.cpp  TextString.cpp  Value.cpp
QuestCore/src/Actions/: ActionGroup.cpp  CaseContainerSwitching.cpp  Clearing.cpp  Copying.cpp  ParagraphSwitching.cpp  Switching.cpp  Transfer.cpp
(+121 files in other folders)
